# hw3-prmgandhi

./: Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
