[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
    { name = "Ligo Scientific Collaboration (LSC) and Param Gandhi", email = "2902gandhiparam@gmail.com" }
]
description = "Tools for working with LIGO data"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "ipykernel==6.29",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["ligotools"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}
